--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
         <button type="submit">Salvar</button>
     </form>
 
+    <div data-js="people-list-info">
+        <table data-js="people-table">
+            <thead>
+                <th>Name</th>
+                <th>Birth Date</th>
+            </thead>
+            <tbody></tbody>
+        </table>
+    </div>
+
     <script src="./app.js"></script>
 </body>
 </html>
