Implement regstration update

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <input type="date" name="birth" id="birth" data-js="birth" required>
         </div>
 
+        <input type="hidden" name="index" id="index" data-js="index">
+
         <button type="submit">Salvar</button>
     </form>
 
@@ -27,6 +29,7 @@
             <thead>
                 <th>Name</th>
                 <th>Birth Date</th>
+                <th>Ações</th>
             </thead>
             <tbody></tbody>
         </table>
