--- a/index.html
+++ b/index.html
@@ -4,35 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de pessoas</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Cadastro de pessoas</h1>
-
-    <form data-js="form">
-        <div>
-            <label for="name">Nome</label>
-            <input type="text" name="name" id="name" data-js="name" placeholder="Nome" required minlength="3" maxlength="120" pattern="[A-Za-zÀ-Úà-úü\s]+" autofocus>
+    <div class="container-fluid p-0">
+        <div class="p-5 bg-secondary bg-gradient text-white">
+            <h1 class="display-3">Cadastro de Aniversários</h1>
         </div>
 
-        <div>
-            <label for="birth">Data de Nascimento</label>
-            <input type="date" name="birth" id="birth" data-js="birth" required>
+        <div class="container">
+            <form data-js="form">
+                <div class="col-lg-6 col-md-8 mt-4">
+                    <label for="name" class="form-label">Nome</label>
+                    <input type="text" name="name" id="name" class="form-control" data-js="name" placeholder="Nome" required minlength="3" maxlength="120" pattern="[A-Za-zÀ-Úà-úü\s]+" autofocus>
+                </div>
+
+                <div class="col-lg-6 col-md-8 mt-4">
+                    <label for="birth" class="form-label">Data de Nascimento</label>
+                    <input type="date" name="birth" id="birth" class="form-control" data-js="birth" required>
+                </div>
+
+                <input type="hidden" name="index" id="index" data-js="index">
+
+                <div class="mt-4 d-grid col-2">
+                    <button type="submit" class="btn btn-primary btn-lg">Salvar</button>
+                </div>
+            </form>
+
+            <div class="mt-5 table-responsive" data-js="people-list-info">
+                <table class="table table-striped align-middle" data-js="people-table">
+                    <caption>Lista de aniversários</caption>
+                    <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Birth Date</th>
+                            <th scope="col">Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
         </div>
-
-        <input type="hidden" name="index" id="index" data-js="index">
-
-        <button type="submit">Salvar</button>
-    </form>
-
-    <div data-js="people-list-info">
-        <table data-js="people-table">
-            <thead>
-                <th>Name</th>
-                <th>Birth Date</th>
-                <th>Ações</th>
-            </thead>
-            <tbody></tbody>
-        </table>
     </div>
 
     <script src="./app.js"></script>
