Keep only pt-BR language on the page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </div>
 
                 <div class="col-lg-6 col-md-8 mt-4">
-                    <label for="birth" class="form-label">Data de Nascimento</label>
+                    <label for="birth" class="form-label">Data de nascimento</label>
                     <input type="date" name="birth" id="birth" class="form-control" data-js="birth" required>
                 </div>
 
@@ -36,8 +36,8 @@
                     <caption>Lista de aniversários</caption>
                     <thead class="table-dark">
                         <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Birth Date</th>
+                            <th scope="col">Nome</th>
+                            <th scope="col">Data de nascimento</th>
                             <th scope="col">Ações</th>
                         </tr>
                     </thead>
